# LogSystem

./: .env.example  .gitignore  .pmcp-root  HOT_STATE.md  Makefile  README.md  logsystem.py  start-backend.ps1  start-dev.bat  start-dev.ps1  start-frontend.ps1
.github/prompts/: context.md  dev-rules.md  focus-spec.md  log-state.json  recent-5.md  summary-10.md
.github/prompts/plans/logsys-platform-mvp/: api-spec.md  change-request.md  development-workflow.md  docs-standard.md  project-spec.md  review-protocol.md  schema.sql
.github/prompts/skills/: frontend.md
.prompts-mcp/: mcp-server-path
deploy/clickhouse/: init.sql
deploy/grafana/dashboards/: errors.json  overview.json
deploy/grafana/datasources/: clickhouse.yml
deploy/postgres/: init.sql
deploy/vector/: vector.toml
docs/: architecture.md  log-format-spec.md  quickstart.md
logsys-analyzer/: Dockerfile  main.py  pyproject.toml
logsys-analyzer/cluster/: normalizer.py  signature.py
logsys-analyzer/stats/: aggregator.py
logsys-api/: Dockerfile  pom.xml
logsys-api/src/main/resources/: application-dev.yml  application.yml
logsys-ui/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts
logsys-ui/src/: main.tsx
logsys-ui/src/app/: app.tsx  layout.tsx  providers.tsx  router.tsx
logsys-ui/src/app/dashboard/: page.tsx
logsys-ui/src/components/: msw-provider.tsx
logsys-ui/src/entities/: index.ts
logsys-ui/src/features/: index.ts
logsys-ui/src/pages/: index.ts
logsys-ui/src/widgets/: index.ts
tests/: test_logsystem.py
tools/cli/: logsystem.py
(+52 files in other folders)
