[project]
name = "logsys-analyzer"
version = "0.1.0"
description = "LogSystem error clustering and statistics analyzer"
requires-python = ">=3.12"
dependencies = [
    "clickhouse-driver>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
logsys-analyzer = "main:main"
